dev/tests/cases/neg/02_undef_fn.tv
df main() -> void {
    ghost(1);
}
